--- a/gaze.html
+++ b/gaze.html
@@ -6,6 +6,7 @@
 		<script type   ="text/javascript" src ="bessel.js"></script>
 		<script type   ="text/javascript" src ="Airy.js"></script>
 		<script type   ="text/javascript" src ="gaze.js"></script>
+		<!--<script type   ="text/javascript" src ="pngmetadata.js"></script>-->
 		<link   type   ="text/css"        href="gaze.css" rel="stylesheet">
 	</head>
 	<!-- ******************************************************************** -->
