Split sources and improved text.

--- a/gaze.html
+++ b/gaze.html
@@ -2,8 +2,12 @@
 <html lang="en">
 	<head>
 		<meta   charset="utf-8" />
+		<script type   ="text/javascript" src ="utility.js"></script>
 		<script type   ="text/javascript" src ="bessel.js"></script>
 		<script type   ="text/javascript" src ="Airy.js"></script>
+		<script type   ="text/javascript" src ="gaze.const.js"></script>
+		<script type   ="text/javascript" src ="gaze.scenarios.js"></script>
+		<script type   ="text/javascript" src ="gaze.pane.js"></script>
 		<script type   ="text/javascript" src ="gaze.js"></script>
 		<!--<script type   ="text/javascript" src ="pngmetadata.js"></script>-->
 		<link   type   ="text/css"        href="gaze.css" rel="stylesheet">
@@ -81,6 +85,7 @@
 							<option selected>None</option>
 						</select>
 					</td></tr><tr><td id="figure 1a text" class="info" bgcolor="#ffffff">
+<!--
 					</td></tr><tr><td class="info" bgcolor="#ffffff">
 <textarea cols="54" rows="12" readonly>
 SCROLL THIS TEXTAREA FOR GUIDANCE ABOUT CONTROLS.
@@ -189,6 +194,7 @@ Above the panes is the last control.
 You can save the current image on your computer
 by clicking on this filename.
 </textarea>
+-->
 					</td></tr><tr><td id="paneInfo" class="info" bgcolor="#ffffff">
 					</td></tr>
 				</table>
