Split sources and improved text.

--- a/gaze.html
+++ b/gaze.html
@@ -31,7 +31,7 @@
 	What are the elements of reflex that draws focus to tiny moving features?
 						</h5>
 						<ol>
-							<li>A off-center tiny contrasty object moves</li>
+							<li>An off-center tiny contrasty object moves</li>
 							<li>An eccentric image appears on the retina</ul>
 							<li>Signal is sent to the midbrain</li>
 							<li>Midbrain signals rectus muscles</li>
