Split sources and improved text.

--- a/gaze.html
+++ b/gaze.html
@@ -21,7 +21,7 @@
 				<a href="" id="buttonSave" onclick="eventSave()" download=""></a>
 				<canvas    id="figure 1a canvas"
 					onmousemove="eventMouseMove(event)"
-					onclick    ="eventMouseClick()"
+					onclick    ="eventMouseClick(event)"
 				></canvas>
 			</td><td width="100%">
 				<table cellpadding="10">
