--- a/gaze.html
+++ b/gaze.html
@@ -26,10 +26,10 @@
 			</td><td width="100%">
 				<table cellpadding="10">
 					<tr><td class="info" valign="top" bgcolor="#ffff00">
-						<h3>Purpose</h3>
-						<h5>
-	What are the elements of reflex that draws focus to tiny moving features?
-						</h5>
+						<h3>
+	How attention is drawn to tiny moving features?
+						</h3>
+						<h4>(Illustrating a full reflex arc)</h4>
 						<ol>
 							<li>An off-center tiny contrasty object moves</li>
 							<li>An eccentric image appears on the retina</ul>
