Added twitch distributor visualization

--- a/distributor.html
+++ b/distributor.html
@@ -30,7 +30,7 @@ tr { height: 50px; }
 <script type="text/javascript">
 var active = 17;
 var indices = 293;
-var cell  = [23, 282, 171, 47, 225, 140, 281, 33, 250, 190, 334, 97, 230, 86, 354, 161, 258, 121, 72, 272, 329, 351, 211, 114, 241, 215, 157, 204, 199, 201, 91, 12, 217, 167, 172, 32, 108, 87, 61, 79, 117, 130, 277, 149, 212, 206, 28, 129, 231, 181, 106, 166, 257, 80, 218, 194, 65, 160, 42, 31, 90, 99, 203, 127, 59, 143, 224, 283, 207, 271, 155, 25, 183, 308, 262, 233, 294, 52, 51, 255, 274, 158, 261, 45, 78, 188, 168, 235, 135, 184, 165, 301, 64, 60, 77, 62, 145, 200, 137, 191, 26, 350, 336, 104, 267, 138, 41, 192, 10, 164, 6, 290, 111, 50, 102, 352, 297, 170, 103, 296, 134, 67, 228, 186, 159, 153, 100, 68, 353, 238, 197, 202, 182, 221, 142, 292, 162, 180, 176, 279, 88, 348, 254, 264, 273, 335, 226, 249, 132, 7, 174, 227, 327, 208, 291, 193, 131, 141, 93, 115, 278, 63, 195, 84, 309, 189, 311, 248, 44, 276, 8, 213, 318, 81, 24, 268, 122, 332, 151, 85, 289, 96, 256, 179, 136, 144, 175, 30, 177, 242, 128, 319, 43, 253, 331, 287, 229, 116, 178, 152, 236, 154, 139, 313, 293, 89, 185, 48, 71, 119, 234, 270, 163, 73, 232, 101, 280, 70, 219, 98, 328, 245, 105, 333, 118, 66, 109, 107, 120, 46, 300, 196, 9, 125, 173, 133, 222, 187, 337, 259, 243, 146, 263, 314, 112, 307, 92, 27, 83, 312, 315, 299, 123, 205, 223, 82, 246, 124, 240, 147, 295, 269, 310, 53, 169, 29, 69, 317, 110, 148, 251, 260, 209, 275, 298, 349, 216, 220, 156, 237, 214, 150, 239, 49, 126, 330, 252, 244, 210, 288, 11, 316, 198];
+var cell  = [313, 151, 289, 130, 287, 155, 6, 63, 137, 201, 274, 234, 264, 80, 81, 73, 262, 111, 193, 165, 166, 153, 28, 249, 248, 263, 100, 293, 312, 52, 128, 216, 183, 149, 198, 158, 102, 12, 236, 233, 272, 316, 51, 64, 350, 133, 283, 99, 30, 281, 258, 253, 228, 65, 115, 179, 138, 241, 121, 270, 32, 257, 139, 85, 108, 150, 223, 148, 7, 132, 169, 277, 319, 131, 152, 214, 188, 11, 238, 196, 282, 315, 84, 222, 204, 268, 168, 271, 87, 104, 162, 83, 127, 89, 278, 246, 309, 273, 291, 226, 184, 114, 71, 259, 25, 31, 300, 207, 213, 299, 29, 107, 82, 254, 290, 90, 294, 173, 68, 163, 122, 348, 203, 97, 301, 237, 10, 328, 146, 181, 157, 154, 126, 227, 119, 124, 230, 225, 298, 134, 280, 44, 144, 61, 26, 195, 202, 109, 136, 176, 244, 77, 333, 129, 191, 33, 208, 117, 219, 48, 220, 329, 334, 101, 156, 353, 145, 235, 269, 171, 91, 295, 135, 123, 279, 170, 221, 335, 42, 311, 88, 159, 106, 276, 78, 103, 260, 180, 174, 161, 59, 205, 70, 147, 50, 9, 47, 98, 53, 43, 187, 23, 96, 331, 267, 189, 8, 251, 60, 209, 239, 110, 182, 190, 167, 211, 351, 261, 185, 314, 177, 172, 93, 62, 178, 243, 24, 120, 143, 318, 252, 49, 69, 160, 212, 307, 231, 142, 72, 317, 288, 197, 229, 327, 232, 349, 354, 41, 192, 352, 256, 255, 308, 86, 125, 140, 194, 240, 27, 336, 141, 206, 224, 275, 292, 199, 200, 116, 186, 217, 337, 46, 175, 245, 67, 45, 105, 296, 92, 118, 330, 79, 66, 210, 164, 310, 215, 112, 332, 242, 218, 297, 250];
 var index = 0;
 var timer = null;
 var running  = false;
@@ -104,7 +104,7 @@ window.onload = function ()
         The visualization below shows a cross-section of the muscle
         where each square is a model of a muscle fiber's cut end.
         </p><p>
-        The model shows twitching sarcomeres as light red.
+        The model shows twitching muscle fibers as light red.
         Sarcomeres at rest or recovering are shown in dark red.
         </p><p>
         Muscles are composed from hierarchical bundles of muscle fibers.
@@ -119,7 +119,7 @@ window.onload = function ()
         has a complex shape implementing a sampler of a regular sweeping pattern.
         The dendrite hosts a fixed set of pre-randomized dendritic spines.
         As the pattern passes across the dendritic spines
-        those which sample a boundary in the pattern twitch their sarcomeres.
+        those which sample a boundary in the pattern twitch their muscle fibers.
         </p><p>
         As long as the pattern delivered is reliable,
         twitch unit duty cycle timing requirements are satisfied.
