Added twitch distributor visualization

--- a/distributor.html
+++ b/distributor.html
@@ -30,7 +30,7 @@ tr { height: 50px; }
 <script type="text/javascript">
 var active = 17;
 var indices = 293;
-var cell  = [313, 151, 289, 130, 287, 155, 6, 63, 137, 201, 274, 234, 264, 80, 81, 73, 262, 111, 193, 165, 166, 153, 28, 249, 248, 263, 100, 293, 312, 52, 128, 216, 183, 149, 198, 158, 102, 12, 236, 233, 272, 316, 51, 64, 350, 133, 283, 99, 30, 281, 258, 253, 228, 65, 115, 179, 138, 241, 121, 270, 32, 257, 139, 85, 108, 150, 223, 148, 7, 132, 169, 277, 319, 131, 152, 214, 188, 11, 238, 196, 282, 315, 84, 222, 204, 268, 168, 271, 87, 104, 162, 83, 127, 89, 278, 246, 309, 273, 291, 226, 184, 114, 71, 259, 25, 31, 300, 207, 213, 299, 29, 107, 82, 254, 290, 90, 294, 173, 68, 163, 122, 348, 203, 97, 301, 237, 10, 328, 146, 181, 157, 154, 126, 227, 119, 124, 230, 225, 298, 134, 280, 44, 144, 61, 26, 195, 202, 109, 136, 176, 244, 77, 333, 129, 191, 33, 208, 117, 219, 48, 220, 329, 334, 101, 156, 353, 145, 235, 269, 171, 91, 295, 135, 123, 279, 170, 221, 335, 42, 311, 88, 159, 106, 276, 78, 103, 260, 180, 174, 161, 59, 205, 70, 147, 50, 9, 47, 98, 53, 43, 187, 23, 96, 331, 267, 189, 8, 251, 60, 209, 239, 110, 182, 190, 167, 211, 351, 261, 185, 314, 177, 172, 93, 62, 178, 243, 24, 120, 143, 318, 252, 49, 69, 160, 212, 307, 231, 142, 72, 317, 288, 197, 229, 327, 232, 349, 354, 41, 192, 352, 256, 255, 308, 86, 125, 140, 194, 240, 27, 336, 141, 206, 224, 275, 292, 199, 200, 116, 186, 217, 337, 46, 175, 245, 67, 45, 105, 296, 92, 118, 330, 79, 66, 210, 164, 310, 215, 112, 332, 242, 218, 297, 250];
+var cell  = [108, 91, 186, 351, 103, 111, 121, 176, 267, 60, 26, 278, 137, 158, 287, 175, 62, 104, 292, 218, 73, 146, 293, 312, 275, 279, 317, 199, 188, 165, 297, 190, 85, 82, 43, 249, 200, 29, 349, 150, 72, 115, 152, 140, 68, 231, 354, 301, 333, 122, 99, 128, 24, 63, 130, 251, 260, 230, 161, 242, 331, 65, 219, 214, 89, 195, 151, 202, 246, 46, 181, 248, 9, 298, 102, 163, 194, 119, 262, 283, 157, 41, 315, 167, 241, 300, 78, 299, 27, 205, 148, 291, 276, 255, 127, 11, 80, 79, 216, 106, 64, 352, 237, 172, 296, 66, 47, 245, 101, 155, 253, 109, 141, 116, 319, 156, 238, 144, 183, 49, 142, 147, 182, 191, 328, 149, 270, 100, 196, 228, 83, 23, 268, 208, 309, 125, 174, 350, 153, 327, 263, 236, 162, 50, 288, 126, 229, 185, 198, 180, 168, 264, 143, 8, 272, 112, 132, 166, 124, 217, 139, 226, 129, 252, 110, 211, 209, 197, 87, 133, 212, 308, 201, 170, 259, 52, 134, 96, 313, 169, 221, 164, 334, 258, 84, 177, 239, 289, 136, 90, 53, 318, 117, 135, 269, 294, 261, 69, 348, 28, 88, 33, 314, 138, 277, 274, 179, 12, 310, 337, 330, 329, 210, 48, 224, 307, 131, 192, 204, 220, 232, 203, 59, 282, 45, 86, 114, 280, 281, 67, 171, 173, 273, 256, 225, 206, 44, 159, 244, 311, 71, 243, 123, 187, 97, 160, 207, 189, 7, 42, 336, 30, 233, 93, 81, 6, 295, 154, 215, 193, 257, 178, 10, 31, 25, 234, 316, 353, 222, 118, 77, 235, 332, 184, 223, 240, 32, 107, 227, 290, 92, 51, 335, 105, 254, 271, 70, 145, 98, 61, 213, 250, 120];
 var index = 0;
 var timer = null;
 var running  = false;
@@ -96,6 +96,7 @@ window.onload = function ()
         <div align="center">
         <h3>Twitch Distributor Visualization</h3>
         <i>Copyright&copy;2018 Jonathan D. Lettvin, All Rights Reserved.</i>
+        <div align="left">
         <p>
         This model simplifies neurons and muscles,
         but not to the point of unnatural.
@@ -121,6 +122,12 @@ window.onload = function ()
         As the pattern passes across the dendritic spines
         those which sample a boundary in the pattern twitch their muscle fibers.
         </p><p>
+        The remote dendrite for each motor neuron expresses a pattern
+        which makes its gradient detectors unique within the sampled pattern.
+        It most likely samples the pattern in multiple places and
+        uses the coincidence of successful samples to trigger
+        the pulse to activate a muscle fiber.
+        </p><p>
         As long as the pattern delivered is reliable,
         twitch unit duty cycle timing requirements are satisfied.
         This strategy guarantees maximum recovery time for all muscle fibers.
@@ -139,6 +146,7 @@ window.onload = function ()
         </p><p>
         This is one of the economies expected in vivo.
         </p>
+        </div>
         <table><caption><h3>Muscle Cross Section</h3></caption>
 <tr><td colspan="19">tonus<h2 id="state"></h2></td>
 </tr><tr><td></td><td></td><td></td><td></td><td></td><td></td><td class="i6">6<br /><br /><br />(-3,+9)</td><td class="i7">7<br /><br /><br />(-2,+9)</td><td class="i8">8<br /><br /><br />(-1,+9)</td><td class="i9">9<br /><br /><br />(+0,+9)</td><td class="i10">10<br /><br /><br />(+1,+9)</td><td class="i11">11<br /><br /><br />(+2,+9)</td><td class="i12">12<br /><br /><br />(+3,+9)</td><td></td><td></td><td></td><td></td><td></td><td></td>
