Added twitch distributor visualization

--- a/distributor.html
+++ b/distributor.html
@@ -30,7 +30,7 @@ tr { height: 50px; }
 <script type="text/javascript">
 var active = 17;
 var indices = 293;
-var cell  = [108, 91, 186, 351, 103, 111, 121, 176, 267, 60, 26, 278, 137, 158, 287, 175, 62, 104, 292, 218, 73, 146, 293, 312, 275, 279, 317, 199, 188, 165, 297, 190, 85, 82, 43, 249, 200, 29, 349, 150, 72, 115, 152, 140, 68, 231, 354, 301, 333, 122, 99, 128, 24, 63, 130, 251, 260, 230, 161, 242, 331, 65, 219, 214, 89, 195, 151, 202, 246, 46, 181, 248, 9, 298, 102, 163, 194, 119, 262, 283, 157, 41, 315, 167, 241, 300, 78, 299, 27, 205, 148, 291, 276, 255, 127, 11, 80, 79, 216, 106, 64, 352, 237, 172, 296, 66, 47, 245, 101, 155, 253, 109, 141, 116, 319, 156, 238, 144, 183, 49, 142, 147, 182, 191, 328, 149, 270, 100, 196, 228, 83, 23, 268, 208, 309, 125, 174, 350, 153, 327, 263, 236, 162, 50, 288, 126, 229, 185, 198, 180, 168, 264, 143, 8, 272, 112, 132, 166, 124, 217, 139, 226, 129, 252, 110, 211, 209, 197, 87, 133, 212, 308, 201, 170, 259, 52, 134, 96, 313, 169, 221, 164, 334, 258, 84, 177, 239, 289, 136, 90, 53, 318, 117, 135, 269, 294, 261, 69, 348, 28, 88, 33, 314, 138, 277, 274, 179, 12, 310, 337, 330, 329, 210, 48, 224, 307, 131, 192, 204, 220, 232, 203, 59, 282, 45, 86, 114, 280, 281, 67, 171, 173, 273, 256, 225, 206, 44, 159, 244, 311, 71, 243, 123, 187, 97, 160, 207, 189, 7, 42, 336, 30, 233, 93, 81, 6, 295, 154, 215, 193, 257, 178, 10, 31, 25, 234, 316, 353, 222, 118, 77, 235, 332, 184, 223, 240, 32, 107, 227, 290, 92, 51, 335, 105, 254, 271, 70, 145, 98, 61, 213, 250, 120];
+var cell  = [150, 196, 282, 310, 12, 218, 256, 110, 143, 145, 277, 253, 84, 65, 138, 239, 147, 289, 131, 121, 248, 194, 352, 133, 328, 348, 42, 146, 275, 215, 327, 102, 219, 235, 313, 137, 242, 81, 144, 152, 197, 233, 288, 47, 120, 135, 307, 334, 203, 88, 264, 106, 123, 44, 349, 23, 311, 184, 188, 86, 51, 240, 269, 162, 112, 91, 67, 97, 173, 291, 238, 199, 27, 155, 354, 297, 82, 164, 69, 43, 170, 263, 231, 202, 114, 287, 301, 279, 11, 154, 309, 169, 245, 217, 98, 244, 33, 192, 163, 179, 337, 96, 212, 68, 160, 77, 178, 118, 10, 206, 191, 204, 249, 108, 128, 141, 353, 186, 148, 257, 176, 63, 336, 151, 180, 66, 241, 46, 100, 80, 41, 331, 49, 50, 251, 122, 99, 254, 24, 134, 182, 283, 117, 7, 262, 226, 189, 246, 295, 318, 187, 308, 312, 103, 159, 299, 119, 208, 109, 149, 278, 232, 168, 28, 252, 60, 216, 48, 127, 317, 223, 195, 6, 330, 92, 116, 296, 261, 271, 237, 125, 316, 315, 9, 190, 78, 213, 166, 89, 130, 124, 72, 227, 59, 274, 201, 222, 174, 234, 259, 25, 62, 126, 158, 71, 177, 8, 31, 105, 281, 290, 293, 229, 157, 236, 200, 300, 224, 214, 276, 255, 104, 221, 243, 225, 193, 319, 153, 228, 258, 90, 156, 140, 230, 211, 30, 87, 210, 329, 165, 333, 335, 85, 220, 167, 70, 185, 45, 294, 142, 172, 351, 73, 314, 52, 267, 298, 175, 207, 260, 350, 136, 61, 83, 111, 181, 332, 270, 161, 205, 101, 280, 129, 64, 32, 268, 198, 132, 93, 29, 79, 107, 209, 250, 273, 292, 26, 183, 272, 139, 115, 171, 53];
 var index = 0;
 var timer = null;
 var running  = false;
@@ -100,6 +100,8 @@ window.onload = function ()
         <p>
         This model simplifies neurons and muscles,
         but not to the point of unnatural.
+        Approximately 240 twitch units are shown
+        in a single bundle of muscle fibers.
         </p><p>
         Twitch units generate a shortening force.
         The visualization below shows a cross-section of the muscle
@@ -137,7 +139,7 @@ window.onload = function ()
         the proposed pre-randomized sampling of a regular pattern.
         Note the (0,0) coordinates at the center of the muscle.
         </p><p>
-        The pattern shows a repeating weak/STRONG tonus for 1 second each.
+        Twitch patterns show a repeating weak/STRONG tonus for 1 second each.
         This simple demonstration illustrates a logical economy
         enabling implementations to ignore parallelism and simply
         act concurrently on all actual delivered pulses,
