--- a/distributor.html
+++ b/distributor.html
@@ -29,7 +29,7 @@ td { height: 45px; width: 45px; color: white; }
 var active = 11;
 var strong = 2;
 var indices = 137;
-var cell  = [55, 104, 67, 77, 86, 63, 141, 60, 92, 42, 121, 37, 41, 108, 99, 45, 123, 46, 126, 107, 71, 83, 151, 98, 124, 96, 127, 148, 44, 17, 84, 128, 153, 15, 76, 5, 23, 135, 27, 152, 30, 147, 33, 49, 47, 78, 52, 119, 31, 125, 79, 150, 35, 53, 69, 94, 6, 59, 120, 28, 138, 105, 34, 113, 90, 160, 114, 43, 16, 74, 103, 65, 162, 82, 48, 112, 36, 163, 81, 95, 7, 64, 102, 91, 56, 61, 145, 97, 122, 101, 116, 75, 146, 109, 134, 19, 115, 118, 93, 21, 68, 161, 131, 137, 8, 140, 89, 54, 4, 149, 70, 22, 50, 40, 66, 18, 106, 164, 29, 85, 139, 73, 72, 88, 57, 132, 80, 100, 58, 111, 32, 20, 62, 136, 133, 87, 110];
+var cell  = [153, 50, 112, 84, 6, 128, 88, 79, 102, 145, 114, 126, 139, 61, 108, 104, 41, 121, 48, 148, 119, 150, 45, 68, 141, 40, 20, 85, 43, 70, 78, 71, 94, 118, 56, 125, 135, 116, 83, 33, 37, 5, 123, 29, 101, 32, 82, 95, 36, 86, 81, 100, 98, 122, 107, 4, 21, 134, 161, 137, 131, 47, 99, 72, 109, 120, 77, 73, 92, 22, 27, 64, 89, 160, 110, 16, 138, 152, 44, 90, 53, 42, 75, 31, 136, 133, 58, 49, 63, 65, 66, 146, 124, 15, 59, 149, 19, 127, 87, 30, 67, 60, 140, 23, 164, 163, 62, 113, 105, 96, 103, 76, 91, 93, 7, 55, 151, 115, 97, 147, 17, 74, 57, 52, 35, 106, 69, 28, 34, 54, 111, 162, 80, 132, 18, 46, 8];
 var index = 0;
 var timer = null;
 var running  = true;
@@ -191,7 +191,7 @@ window.onload = function ()
         Click the buttons under here to fill this area with information.
         </textarea><br />
         <span id="buttons"></span>
-        <table><caption><h3>Muscle Fiber Bundle Cross Section</h3></caption>
+        <table><caption align="bottom"><h3>Muscle Fiber Bundle Cross Section</h3></caption>
 <td colspan="13" bgcolor="black"><button id="pause" onclick="eRun(event)">STOP</button> Click here to observe active distribution (or pause)</td><tr><td colspan="13">tonus<h2 id="state">None</h2></td>
 </tr><tr><td></td><td></td><td></td><td></td><td class="i4" style="color:white;" bgcolor="#552222">0<br /><br />(-2,+6)</td><td class="i5" style="color:white;" bgcolor="#552222">1<br /><br />(-1,+6)</td><td class="i6" style="color:white;" bgcolor="#552222">2<br /><br />(+0,+6)</td><td class="i7" style="color:white;" bgcolor="#552222">3<br /><br />(+1,+6)</td><td class="i8" style="color:white;" bgcolor="#552222">4<br /><br />(+2,+6)</td><td></td><td></td><td></td><td></td>
 </tr><tr><td></td><td></td><td class="i15" style="color:white;" bgcolor="#552222">5<br /><br />(-4,+5)</td><td class="i16" style="color:white;" bgcolor="#552222">6<br /><br />(-3,+5)</td><td class="i17" style="color:white;" bgcolor="#552222">7<br /><br />(-2,+5)</td><td class="i18" style="color:white;" bgcolor="#552222">8<br /><br />(-1,+5)</td><td class="i19" style="color:white;" bgcolor="#552222">9<br /><br />(+0,+5)</td><td class="i20" style="color:white;" bgcolor="#552222">10<br /><br />(+1,+5)</td><td class="i21" style="color:white;" bgcolor="#552222">11<br /><br />(+2,+5)</td><td class="i22" style="color:white;" bgcolor="#552222">12<br /><br />(+3,+5)</td><td class="i23" style="color:white;" bgcolor="#552222">13<br /><br />(+4,+5)</td><td></td><td></td>
