Improved text info delivery

--- a/distributor.html
+++ b/distributor.html
@@ -24,12 +24,13 @@ table, th, td {
 	text-align: center;
 }
 td { height: 45px; width: 45px; color: white; }
+textarea { resize: none; }
 </style>
 <script type="text/javascript">
 var active = 11;
 var strong = 2;
 var indices = 137;
-var cell  = [153, 50, 112, 84, 6, 128, 88, 79, 102, 145, 114, 126, 139, 61, 108, 104, 41, 121, 48, 148, 119, 150, 45, 68, 141, 40, 20, 85, 43, 70, 78, 71, 94, 118, 56, 125, 135, 116, 83, 33, 37, 5, 123, 29, 101, 32, 82, 95, 36, 86, 81, 100, 98, 122, 107, 4, 21, 134, 161, 137, 131, 47, 99, 72, 109, 120, 77, 73, 92, 22, 27, 64, 89, 160, 110, 16, 138, 152, 44, 90, 53, 42, 75, 31, 136, 133, 58, 49, 63, 65, 66, 146, 124, 15, 59, 149, 19, 127, 87, 30, 67, 60, 140, 23, 164, 163, 62, 113, 105, 96, 103, 76, 91, 93, 7, 55, 151, 115, 97, 147, 17, 74, 57, 52, 35, 106, 69, 28, 34, 54, 111, 162, 80, 132, 18, 46, 8];
+var cell  = [15, 44, 104, 118, 45, 34, 42, 74, 145, 122, 139, 87, 68, 110, 8, 164, 17, 27, 77, 124, 86, 100, 71, 33, 76, 56, 32, 75, 21, 101, 7, 62, 40, 93, 125, 72, 92, 53, 69, 65, 146, 116, 61, 113, 137, 95, 140, 91, 30, 97, 49, 37, 102, 54, 119, 107, 55, 153, 43, 160, 60, 5, 151, 111, 112, 121, 103, 57, 89, 149, 78, 161, 126, 31, 135, 131, 123, 150, 98, 4, 163, 109, 115, 133, 83, 141, 162, 52, 19, 36, 127, 80, 64, 148, 114, 58, 134, 120, 22, 128, 81, 16, 28, 23, 136, 73, 108, 99, 47, 138, 29, 90, 105, 96, 79, 94, 88, 106, 50, 46, 18, 70, 152, 6, 147, 48, 82, 85, 66, 35, 132, 20, 63, 67, 84, 59, 41];
 var index = 0;
 var timer = null;
 var running  = true;
@@ -187,7 +188,7 @@ window.onload = function ()
         <div align="center">
         <h3>Twitch Distributor Visualization</h3>
         <i>Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved.</i>
-        <br /><textarea id="info" rows="7" cols="82">
+        <br /><textarea id="info" rows="7" cols="82" readonly>
         Click the buttons under here to fill this area with information.
         </textarea><br />
         <span id="buttons"></span>
